--- a/src/app/componentes/switch-boton/switch-boton.component.html
+++ b/src/app/componentes/switch-boton/switch-boton.component.html
@@ -1,5 +1,5 @@
 <label class="switch">
-    <input type="checkbox" id="togBtn">
+    <input  [(ngModel)]="value"  [ngClass]="clase_input" [id]="id"   type="checkbox" id="togBtn">
     <div class="slider "><!--ADDED HTML -->
         <span class="on"><b>Sí</b></span>
         <span class="off"><b>No</b></span><!--END-->
