--- a/src/app/paginas/formulario_G/formulario-g.component.html
+++ b/src/app/paginas/formulario_G/formulario-g.component.html
@@ -61,16 +61,16 @@
             <table >
 
                     <tr>
-                            <th  class="esquina_izquierda">Especialización</th>
-                            <th class="celda_subtitulo"> Hombres</th>
-                            <th class="celda_subtitulo">Mujeres</th>
-                            <th class="celda_subtitulo">Mujeres</th>
-                            <th class="esquina_derecha">N° Meses</th>
+                            <th  class="esquina_izquierda">Metro ruma</th>
+                            <th class="celda_subtitulo"> BMDT</th>
+                            <th class="celda_subtitulo">MESTREO</th>
+                            <th class="celda_subtitulo">M3SOLIDO</th>
+                            <th class="esquina_derecha">GMT</th>
                 
                 
                         </tr>
                         <tr>
-                                <td class="sin_borde_abajo">Profesionales</td>
+                                <td class="sin_borde_abajo">Pino radiata CC</td>
                                 <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                 <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                 <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
@@ -78,42 +78,42 @@
                      
                             </tr>
                             <tr>
-                                    <td class="sin_borde_abajo">Técnicos</td>
+                                    <td class="sin_borde_abajo">Pino radiata SC</td>
                                     <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                     <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                     <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                     <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                 </tr>
                                 <tr>
-                                        <td class="sin_borde_abajo">Operarios calificados</td>
+                                        <td class="sin_borde_abajo">Eucalyptus Globulus CC</td>
                                         <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                         <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                         <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                         <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                     </tr>
                                     <tr>
-                                            <td class="sin_borde_abajo">Operarios no calificados</td>
+                                            <td class="sin_borde_abajo">Eucalyptus Globulus SC</td>
                                             <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                             <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                             <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                             <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                         </tr>
                                         <tr>
-                                                <td class="sin_borde_abajo">Administrativos</td>
+                                                <td class="sin_borde_abajo">Eucalyptus Nitens CC</td>
                                                 <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                                 <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                                 <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                                 <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                             </tr>
                                             <tr>
-                                                    <td class="sin_borde_abajo">Administrativos</td>
+                                                    <td class="sin_borde_abajo">Eucalyptus Nitens SC</td>
                                                     <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                                     <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                                     <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                                     <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                                 </tr>
                                                 <tr>
-                                                        <td class="sin_borde_abajo">Total</td>
+                                                        <td class="sin_borde_abajo">Otras exóticas</td>
                                                         <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                                         <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
                                                         <td ><textbox-numerico [titulo]="''" [clase_input]="'input_form_g'"></textbox-numerico></td>
