--- a/src/app/paginas/inicio/cabecera/header.component.html
+++ b/src/app/paginas/inicio/cabecera/header.component.html
@@ -39,6 +39,6 @@
       <img class="img_filtro" src="/assets/icons/icon_filtro.png">
     </nav>
     <img src="/assets/img/logo_infor.png" class="logo_infor_hoja">
-    <p class="encuestas_pendientes" >Encuestas pendientes: xx</p>
+    <p class="encuestas_pendientes" >Encuestas pendientes: 5</p>
 </div>
 
