--- a/src/app/componentes/checkbox/checkbox.component.html
+++ b/src/app/componentes/checkbox/checkbox.component.html
@@ -2,7 +2,7 @@
     <table>
         <tr>
             <td> <label [style.width.px]="label_ancho" [ngClass]="clase_label">  {{titulo}} </label> </td>
-            <td> <input [(ngModel)]="value"  [ngClass]="clase_input" type="checkbox" [id]="id"  [disabled]="disable" onclick="box_group(this.id)"></td>
+            <td> <input [(ngModel)]="value"  [ngClass]="clase_input" type="checkbox" [disabled]="disable" onclick="box_group(this.id)"></td>
         </tr>
     </table>
 </div>
