--- a/src/app/componentes/email/email.component.html
+++ b/src/app/componentes/email/email.component.html
@@ -1,8 +1,8 @@
 <div>
     <table>
         <tr>
-            <td [style.display]="ocultar ? 'none' : 'inline-block'"> <label for="text" [style.width.px]="label_ancho" [ngClass]="clase_label">{{titulo}}</label></td>
-            <td><input [(ngModel)]="value" [ngClass]="clase_input" id="text" type="email" class="form-control" [style.width.px]="input_ancho"></td>
+            <td [style.display]="ocultar ? 'none' : 'inline-block'"> <label  [style.width.px]="label_ancho" [ngClass]="clase_label">{{titulo}}</label></td>
+            <td><input [(ngModel)]="value" [ngClass]="clase_input" type="email" class="form-control" [style.width.px]="input_ancho"></td>
         </tr>
         <tr >
                 <td>
