--- a/src/app/componentes/menu-footer/menu-footer.component.html
+++ b/src/app/componentes/menu-footer/menu-footer.component.html
@@ -2,13 +2,13 @@
     <table>
         <tr>
 
-            <a *ngFor="let datas of data ">
-                <ng-container *ngIf="datas.SUBSECCION == 0 && datas.SECCION != 'J'">
-                    <td routerLinkActive="marcador "   [routerLink]="['/formulario' , datas.SECCION ,id_encuesta]">
-                        {{datas.SECCION}}
+            <ng-container *ngFor="let option of lista ; let i = index">
+                <ng-container *ngIf="option[1] == 0 && option[0] != 'J'">
+                    <td routerLinkActive="marcador "   [routerLink]="['/formulario' , option[0].toString() ,id_encuesta]">
+                        {{option[0]}}
                     </td>
                 </ng-container>
-            </a>
+            </ng-container>
 
         </tr>
     </table>
