--- a/src/app/componentes/textbox-numerico/textbox-numerico.component.css
+++ b/src/app/componentes/textbox-numerico/textbox-numerico.component.css
@@ -48,6 +48,7 @@ input {
 
 .label_form_c {
     width: 178px;
+    margin-top: 4px;
 }
 
 .input_form_c3 {
@@ -56,11 +57,12 @@ input {
 
 .input_form_c4 {
     width: 75px;
+    margin-top: 7px;
 }
 
 .input_form_c {
     width: 185px;
-    height: 24px;
+  
 }
 
 
@@ -122,6 +124,11 @@ input {
         width: 20rem;
     }
     /*FORMULARIO C*/
+    .input_form_antecedentes_turno {
+        width: 183px;
+        height: 26px;
+    }
+
     .input_form_c4 {
         width: 75px;
         font-size: unset;
@@ -134,7 +141,7 @@ input {
         width: 178px;
     }
     .input_form_c {
-        width: 175px;
+        width: 186px;
     }
     /*FORMULARIO D*/
     .input_form_d {
@@ -162,6 +169,7 @@ input {
         padding-top: 2px;
         padding-bottom: 2px;
     }
+ 
     label {
         width: 88px;
     }
@@ -177,8 +185,28 @@ input {
     }
     .fono {
         width: 66px;
+        height: 26px;
     }
     /*FORMULARIO A*/
+    /*FORMULARIO C*/
+    .input_form_antecedentes_turno {
+        width: 233px;
+        height: 26px;
+    }
+
+    .label_form_c_variacion {
+        width: 99px;
+    }
+    .input_form_c_variacion {
+        height: 26px;
+    }
+    .label_form_c {
+        width: 178px;
+    }
+    .input_form_c {
+        height: 26px;
+        width: 186px;
+    }
     /*FORMULARIO D*/
     .input_form_d {
         width: 3rem;
@@ -239,10 +267,12 @@ input {
     .input_form_c4 {
         width: 75px;
         font-size: unset;
+        margin-top: 7px;
         height: 37px;
     }
     .input_form_c3 {
         width: 80px;
+        margin-top: 7px;
         font-size: unset;
         height: 37px;
     }
@@ -250,7 +280,7 @@ input {
         width: 178px;
     }
     .input_form_c {
-        width: 235px;
+        width: 212px;
         height: 37px;
     }
     .input_form_c_variacion {
@@ -261,12 +291,13 @@ input {
         width: 113px;
     }
     .input_form_antecedentes_turno {
-        width: 261px;
+        width: 243px;
         height: 37px;
     }
     /*FORMULARIO F*/
     .input_form_f {
-        width: 13.7rem;
+        width: 13.9rem;;
+        height: 26px;
     }
     /*FORMULARIO D*/
     .input_form_d {
@@ -321,9 +352,14 @@ input {
         height: 27px;
         width: 5.1rem;
     }
+    .fono{
+        margin-top: 25px;
+        height: 30px;
+        width: 228px;
+    }
 }
 
-@media screen and (max-width: 425px) and (min-width:320px) {
+@media screen and (max-width: 425px) and (min-width:321px) {
     td {
         display: flex;
     }
@@ -343,7 +379,7 @@ input {
         width: 10rem;
     }
     .fono {
-        margin-top: 33px;
+     
         width: 9.4rem;
     }
     /*FORMULARIO A*/
@@ -378,7 +414,7 @@ input {
     }
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width:321px) {
     /*FORMULARIO E*/
     .input_form_e_permanente {
         width: 66px;
