--- a/src/app/componentes/textbox-numerico/textbox-numerico.component.html
+++ b/src/app/componentes/textbox-numerico/textbox-numerico.component.html
@@ -1,10 +1,10 @@
 <div align="center">
     <table>
         <tr>
-            <td [style.display]="ocultar ? 'none' : 'inline-block'"> <label for="text" [style.width.px]="label_ancho" [ngClass]="clase_label">{{titulo}}</label></td>
-            <td [style.display]="form_c ? 'block' : 'inline-block'"><input [ngClass]="clase_input" id="text" type="number" class="form-control" [style.width.px]="input_ancho" [(ngModel)]="value"></td>
+            <td [style.display]="ocultar ? 'none' : 'inline-block'"> <label [style.width.px]="label_ancho" [ngClass]="clase_label">{{titulo}}</label></td>
+            <td [style.display]="form_c ? 'block' : 'inline-block'"><input [ngClass]="clase_input"  type="number" class="form-control" [style.width.px]="input_ancho" [(ngModel)]="value"></td>
         </tr>
-        <tr >
+        <tr *ngIf="clase_input != 'input_form_c3' &&  clase_input != 'input_form_c4' && clase_input != 'input_form_g'&& clase_input != 'input_form_h'&& clase_input != 'input_form_e_permanente'&& clase_input != 'input_form_e_temporal'&& clase_input != 'input_form_f'">
                 <td >
                        
                 </td>
@@ -12,5 +12,6 @@
                     <b *ngIf="valido == false " class="requerido" >* is required </b> &nbsp;
             </td>
         </tr>
+     
     </table>
 </div>
