--- a/src/app/componentes/textbox-porcentaje/textbox-porcentaje.component.html
+++ b/src/app/componentes/textbox-porcentaje/textbox-porcentaje.component.html
@@ -1,8 +1,8 @@
 <div align="center">
     <table>
         <tr>
-            <td [style.display]="ocultar ? 'none' : 'inline-block'"> <label for="text" [style.width.px]="label_ancho" [ngClass]="clase_label">{{titulo}}</label></td>
-            <td [style.display]="form_c ? 'block' : 'inline-block'"><input [(ngModel)]="value" id="text" type="text" class="form-control" [ngClass]="clase_input" [style.width.px]="input_ancho" minlength="4">
+            <td [style.display]="ocultar ? 'none' : 'inline-block'"> <label  [style.width.px]="label_ancho" [ngClass]="clase_label">{{titulo}}</label></td>
+            <td [style.display]="form_c ? 'block' : 'inline-block'"><input [(ngModel)]="value" type="text" class="form-control" [ngClass]="clase_input" [style.width.px]="input_ancho" minlength="4">
 
             </td>
         </tr>
