--- a/src/app/paginas/formulario_A/form-a.component.css
+++ b/src/app/paginas/formulario_A/form-a.component.css
@@ -2,7 +2,7 @@
 textbox,
 lista-desplegable,
 email,
-textbox-numerico {
+textbox-numerico, fecha {
     margin-left: 11px;
 }
 
@@ -24,6 +24,8 @@ tr {
     background-color: grey;
     border-color: grey;
     margin-left: 15px;
+    margin-bottom: 16px;
+    border-radius: 3px;
 }
 
 .btn-gps {
@@ -46,9 +48,13 @@ tr {
 .label_switch {
     margin-left: 15px;
     margin-right: 19px;
+    margin-bottom: 20px;
 }
 
-
+switch-boton
+{
+    margin-bottom: 20px;
+}
 
 /*Responsive*/
 
@@ -115,6 +121,7 @@ tr {
 }
 
 @media screen and (max-width: 850px) and (min-width: 766px) {
+    
     .label_switch {
         margin-left: 15px;
         margin-top: 10px;
@@ -130,7 +137,7 @@ tr {
     .btn-gps {
         width: 48px;
         height: 42px;
-        margin-top: 0.5rem;
+        margin-top: 1rem;
     }
     .boton {
         margin-left: 15rem;
@@ -138,7 +145,7 @@ tr {
         margin-bottom: 2rem;
         height: 40px;
         width: 278px;
-        border-radius: 4px;
+        border-radius: 3px;
     }
     .img-gps {
         width: 16px;
@@ -153,13 +160,6 @@ tr {
     }
     .form-inline {
         margin-bottom: unset;
-    }
-    textbox,
-    lista-desplegable,
-    email,
-    textbox-numerico,
-    codigo-fono {
-        margin-bottom: 15px;
     }
 }
 
