--- a/src/app/paginas/formulario_I/formulario-i.component.css
+++ b/src/app/paginas/formulario_I/formulario-i.component.css
@@ -8,7 +8,7 @@
 table
 {
     margin-left:10px;
-
+    margin-right:40px;
 }
 
 
@@ -20,6 +20,11 @@ table
  
 }
 @media  screen and (max-width: 552px)   {
+    table
+{
+
+    margin-right:9px;
+}
   .label_input
   {
       width: 15rem;
